# URLShelf

./: .gitignore  .markdownlint-cli2.jsonc  README.md  Taskfile.yml  _typos.toml  app.py  mise.toml  package.json  pnpm-lock.yaml  pyproject.toml  screenshot.avif
.github/workflows/: ci.yml  ghcr.yml
assets/: style.css
container/prod/: Dockerfile  README.md  URLShelf_podman_quadlet_sample.container  compose.yaml
taskfiles/: Taskfile.build.yml  Taskfile.format.yml  Taskfile.lint.yml  Taskfile.test.yml  Taskfile.vars.yml
templates/: _page_rows.html  edit.html  index.html  manage.html  page.html
tests/: test_app.py
