[project]
name = "urlshelf"
version = "0.1.0"
description = "URLShelf: a simple SQLite3-backed web app for saving URL + Markdown/HTML"
requires-python = ">=3.13"
dependencies = [
  "flask>=3.0",
  "markdown>=3.6",
  "bleach>=6.1",
]

[dependency-groups]
dev = [
  "pyright>=1.1.407",
  "pytest>=8.3",
  "ruff>=0.13.0",
  "types-Flask>=1.1.6",
  "types-Markdown>=3.7.0",
  "types-bleach>=6.1.0",
]

[tool.uv]
package = false

[tool.pyright]
typeCheckingMode = "strict"
reportMissingTypeStubs = "none"
reportDeprecated = "error"
reportIncompatibleVariableOverride = "error"
reportAttributeAccessIssue = "error"
reportUnusedImport = "error"
reportUnusedClass = "error"
reportUnusedFunction = "error"
reportUnnecessaryComparison = "error"
reportUnknownLambdaType = "error"
reportUnnecessaryIsInstance = "error"
reportMissingTypeArgument = "error"
reportArgumentType = "error"
reportMissingParameterType = "error"
reportPrivateUsage = "error"
reportUnknownArgumentType = "error"
reportUnknownMemberType = "error"
reportUnknownParameterType = "error"
reportUnknownVariableType = "error"
reportUnnecessaryCast = "error"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "TID", "C4", "N"]
fixable = ["ALL"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
